[package]
name = "j2rs2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.9"
log = "0.4.14"
env_logger = "0.9.0"
clap = "2.33.3"

[dependencies.jni]
version = "0.19.0"
features = ["invocation"]